--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -40,8 +40,11 @@
   padding-left: 0;
 }
 
-.about__card:nth-of-type(5) {
-  text-align: left;
+.about__card-icon {
+  padding-top: 20px;
+
+  color: @main-color;
+  text-align: center;
 }
 
 .about__title {
@@ -74,11 +77,15 @@
 .about__contact {
   padding-left: 0;
   list-style: none;
+
+  font-size: 16px;
 }
 
 .about__details {
   padding-left: 0;
   list-style: none;
+
+  font-size: 16px;
 }
 
 .about__details-content {
