--- a/less/blocks/answers-main.less
+++ b/less/blocks/answers-main.less
@@ -46,6 +46,8 @@
 .answers-main__subtitle {
   max-width: 900px;
   margin: 0 auto;
+
+  font-size: 15px;
   text-align: center;
 }
 
@@ -79,13 +81,17 @@
   width: 100%;
   border-left: 2px solid @main-color;
 
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 
   background-color: #fff;
 }
 
 .nav-tabs > li a {
   border-radius: 0;
+  font-size: 14px;
+  font-weight: 600;
+
+  text-transform: uppercase;
 }
 
 .nav-tabs > a {
@@ -107,6 +113,10 @@
 
 .answer-main__tabs {
   width: 100%;
+}
+
+.answer-main__tabs li {
+  font-size: 15px;
 }
 
 .answer-main__tabs .tab-content {
