--- a/less/blocks/body.less
+++ b/less/blocks/body.less
@@ -1,14 +1,20 @@
-/* @font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Black.ttf");
+@font-face {
+  font-family: "ProximaNova";
+  src: url("../../fonts/ProximaNova-Reg.otf");
   font-weight: normal;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Bold.ttf");
+  font-family: "ProximaNova";
+  src: url("../../fonts/ProximaNova-Light.otf");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "ProximaNova";
+  src: url("../../fonts/ProximaNova-Bold.otf");
   font-weight: bold;
-} */
+}
 
 html {
   box-sizing: border-box;
@@ -28,11 +34,12 @@ body {
   line-height: 30px;
   overflow-x: hidden;
   font-size: 14px;
-  /* font-family: "Roboto", Arial, sans-serif; */
+  font-family: "ProximaNova", Arial, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6, {
   color: #606060;
+  font-family: "ProximaNova-Bold", Arial, sans-serif;
 }
 
 h1 {
