--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -39,8 +39,8 @@
 }
 
 .btn--callback {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 
   width: 235px;
 
@@ -92,7 +92,7 @@
   padding-bottom: 10px;
   padding-left: 25px;
 
-  width: 300px;
+  width: 60%;
 
   background-color: transparent;
   color: @text-color;
@@ -324,7 +324,7 @@
   padding-bottom: 10px;
   padding-left: 25px;
 
-  width: 350px;
+  width: 60%;
 
   background-color: transparent;
   color: #fff;
@@ -411,6 +411,10 @@
   .btn-footer__form {
     width: 300px;
   }
+
+  .btn--welcome-to-shop {
+    width: 300px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -421,5 +425,14 @@
 
   .back-wrapper {
     display: block;
+  }
+
+  .btn-review {
+    width: 350px;
+  }
+
+  .btn--callback {
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 }
