--- a/less/blocks/customer-review-slider.less
+++ b/less/blocks/customer-review-slider.less
@@ -74,6 +74,13 @@
 .customer-review__content {
   position: relative;
   color: #fff;
+
+  font-size: 15px;
+}
+
+.customer-review__author {
+  color: #fff;
+  font-weight: 600;
 }
 
 .customer-review__content::before {
