--- a/less/blocks/our-products.less
+++ b/less/blocks/our-products.less
@@ -30,11 +30,12 @@
 
   color: @main-color;
   font-size: 28px;
-  font-weight: 600;
+  font-weight: 900;
 
   text-align: center;
 }
 
 .our-products__content {
+  font-size: 16px;
   text-align: center;
 }
