--- a/less/blocks/product-aquel-1000.less
+++ b/less/blocks/product-aquel-1000.less
@@ -11,7 +11,7 @@
   padding-left: 20px;
 
   font-size: 30px;
-  font-weight: 600;
+  font-weight: 900;
   color: #fff;
 
   background-color: @main-color;
@@ -143,6 +143,15 @@
 .aquel-1000__img {
   width: 100%;
   padding: 15px;
+}
+
+.aquel-1000__img  img {
+  transition: all 0.5s;
+}
+
+.aquel-1000__img:hover img {
+  transform: scale(1.1);
+  transition: all 0.5s;
 }
 
 @media (min-width: 940px) {
