--- a/less/blocks/work-process.less
+++ b/less/blocks/work-process.less
@@ -15,6 +15,12 @@
   text-align: center;
 }
 
+.work-process__description {
+  padding-top: 10px;
+  font-size: 15px;
+  text-align: center;
+}
+
 .work-process__title::after {
   content: " ";
   display: block;
@@ -88,7 +94,9 @@
 
 .work-process__content {
   position: relative;
+
   font-weight: 600;
+  text-align: center;
 }
 
 .work-process__content::before {
@@ -96,10 +104,10 @@
   display: block;
   position: absolute;
 
-  width: 50px;
-  height: 2px;
+  width: 55px;
+  height: 3px;
 
-  left: 28%;
+  left: 30%;
   top: -10px;
 
   background-color: @main-color;
@@ -110,10 +118,10 @@
   display: block;
   position: absolute;
 
-  width: 50px;
-  height: 2px;
+  width: 55px;
+  height: 3px;
 
-  left: 28%;
+  left: 30%;
   bottom: -10px;
 
   background-color: @main-color;
