--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -1,5 +1,5 @@
 .footer {
-
+  padding-bottom: 35px;
 }
 
 .footer__wrapper {
@@ -84,12 +84,16 @@
 }
 
 .footer__contact-list li {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-bottom: 20px;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.footer__contact-list a {
+  color: #777777;
 }
 
 .footer__list-item-email {
+  margin-top: 15px;
   position: relative;
 }
 
@@ -324,8 +328,8 @@
   margin-bottom: 10px;
 }
 
-.footer__copyright-content svg {
-  fill: red;
+.footer__copyright-content i {
+  color: #ff0000;
 }
 
 .footer__copyright-social {
@@ -335,13 +339,13 @@
   width: 250px;
 }
 
-.footer__copyright-social svg {
-  fill: #fff;
+.footer__copyright-social i {
+  color: #fff;
 
   transition: all 0.6s;
 
   &:hover {
-    fill: @text-color;
+    color: @text-color;
 
     transition: all 0.6s;
   }
