--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -106,7 +106,9 @@
 .introduction__about {
   width: 100%;
 
-  padding: 20px;
+  padding-top: 25px;
+  padding-right: 15px;
+  padding-bottom: 35px;
   padding-left: 40px;
 
   background-color: @main-color;
@@ -116,7 +118,7 @@
   position: relative;
   margin-bottom: 40px;
   font-size: 28px;
-  font-weight: 600;
+  font-weight: 900;
   color: #fff;
 }
 
@@ -132,7 +134,7 @@
 }
 
 .introduction__about-content {
-  font-size: 14px;
+  font-size: 15px;
   color: #fff;
   margin-bottom: 30px;
 }
@@ -170,9 +172,10 @@
 
 .introduction__lead-title {
   max-width: 350px;
-  margin-bottom: 20px;
+  margin-top: 0;
+  margin-bottom: 10px;
   padding-left: 50px;
-  font-weight: 600;
+  font-weight: 900;
 }
 
 .introduction__lead-list {
@@ -234,19 +237,26 @@
 
 .introduction--tehnology {
   height: auto;
-  padding-top: 30px;
+
+  padding-top: 0;
+  padding-bottom: 0;
 
   text-align: center;
 }
 
 .introduction--tehnology .introduction__title {
-  width: 315px;
-  margin-bottom: 10%;
+  font-size: 26px;
+
+  letter-spacing: 1px;
 }
 
 .introduction--tehnology .introduction__aquel-title {
   display: block;
-  margin-bottom: 30px;
+
+  padding-top: 20px;
+
+  font-size: 40px;
+  font-weight: 900;
 }
 
 .introduction__reading-time {
