--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -41,7 +41,25 @@
 }
 
 .navbar-default .navbar-nav > li > a {
+  position: relative;
   color: #fff;
+  font-weight: 600;
+
+  transition: all 0.4s;
+
+  &:hover {
+    color: #fff;
+    box-shadow: inset 0px -3px 0px 0px rgb(255, 255, 255);
+
+    transition: all 0.4s;
+  }
+}
+
+.navbar-default .navbar-nav > li > .dropdown-toggle {
+
+  &:hover {
+    box-shadow: none;
+  }
 }
 
 .navbar-default .navbar-nav .dropdown {
@@ -53,7 +71,9 @@
   padding-top: 5px;
   padding-bottom: 5px;
 
-  color: #000;
+
+  font-weight: 600;
+  color: @text-color;
   background-color: #fff;
 
   &:hover {
@@ -63,7 +83,7 @@
 }
 
 .navbar-default .navbar-nav .dropdown .caret {
-  margin-left: 100px;
+  margin-left: 57px;
 }
 
 .navbar-default .navbar-toggle:hover,
@@ -71,7 +91,19 @@
   background-color: darken(@main-color, 10%);
 }
 
-@media (min-width: 900px) {
+@media (min-width: 768px) {
 
+  .navbar-nav {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%
+  }
+}
+
+@media (min-width: 1070px) {
+
+  .navbar-nav {
+    justify-content: space-between;
+  }
 }
 
