--- a/less/blocks/tehnology-review.less
+++ b/less/blocks/tehnology-review.less
@@ -12,13 +12,13 @@
 
   margin-bottom: 20px;
 
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
+  padding-top: 25px;
+  padding-right: 25px;
+  padding-bottom: 25px;
+  padding-left: 25px;
 
   border-radius: 2px;
-  background-color: @bg-color-carrots;
+  outline: 2px solid @main-color;
 
   box-sizing: border-box;
 
@@ -30,6 +30,13 @@
   }
 }
 
+.tehnology-review-card--first {
+  padding-top: 0;
+  padding-right: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+}
+
 .tehnology-review__title {
 
 }
@@ -39,10 +46,33 @@
 }
 
 .tehnology-review__content {
-  margin-bottom: 20px;
-  /* text-indent: 10px; */
-  text-align: justify;
-  font-size: 18px;
+  margin-bottom: 0;
+
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+
+  text-align: center;
+  font-size: 16px;
+
+  color: #333;
+}
+
+.tehnology-review__bg {
+  margin-bottom: 0;
+
+  padding-top: 15px;
+  padding-right: 20px;
+  padding-bottom: 15px;
+  padding-left: 20px;
+
+  color: #fff;
+  background-color: @main-color;
+
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
 }
 
 .tehnology-review blockquote {
