--- a/less/blocks/welcome-to-shop.less
+++ b/less/blocks/welcome-to-shop.less
@@ -7,7 +7,7 @@
 
   margin: 0 auto;
 
-  background-image: url(../../img/slider-bg-optimized.jpg);
+  background-image: url(../img/slider-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 
