All page new design

--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -1,5 +1,5 @@
 .about {
-
+  background-color: #f7f7f7;
 }
 
 .about .container-article {
@@ -7,13 +7,18 @@
   justify-content: space-around;
   flex-wrap: wrap;
   width: 90%;
+
+  padding-top: 0;
+  padding-bottom: 0;
+
+  background-color: #fff;
 }
 
 .about__card {
   display: flex;
   flex-direction: column;
 
-  width: 90%;
+  width: 100%;
   margin-bottom: 20px;
 
   padding-right: 20px;
@@ -107,7 +112,7 @@
   }
 
   .about__card:first-child {
-    width: 95%;
+    width: 100%;
   }
 
   .about__card:nth-of-type(2) {
