--- a/less/blocks/answers-main.less
+++ b/less/blocks/answers-main.less
@@ -147,7 +147,7 @@
   width: 30%;
 
   background-color: @main-color;
-  background-image: url(../../img/icon/how-order.png);
+  background-image: url(../img/icon/how-order.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 80%;
@@ -158,7 +158,7 @@
   width: 30%;
 
   background-color: @main-color;
-  background-image: url(../../img/icon/how-delivery.png);
+  background-image: url(../img/icon/how-delivery.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size:90%;
@@ -169,7 +169,7 @@
   width: 30%;
 
   background-color: @main-color;
-  background-image: url(../../img/icon/how-delivery.png);
+  background-image: url(../img/icon/accept-payment.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size:90%;
@@ -180,7 +180,7 @@
   width: 30%;
 
   background-color: @main-color;
-  background-image: url(../../img/icon/how-delivery.png);
+  background-image: url(../img/icon/how-return.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size:90%;
@@ -191,7 +191,7 @@
   width: 30%;
 
   background-color: @main-color;
-  background-image: url(../../img/icon/how-delivery.png);
+  background-image: url(../img/icon/our-guarantee.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size:90%;
@@ -202,7 +202,7 @@
   width: 30%;
 
   background-color: @main-color;
-  background-image: url(../../img/icon/how-delivery.png);
+  background-image: url(../img/icon/filter-confident.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size:90%;
