--- a/less/blocks/blog.less
+++ b/less/blocks/blog.less
@@ -1,9 +1,13 @@
 .blog {
-
+  background-color: #f7f7f7;
 }
 
 .blog .container-article {
   width: 90%;
+  padding-top: 0;
+  padding-bottom: 0;
+
+  background-color: #fff;
 }
 
 .blog-teaser {
@@ -175,7 +179,7 @@
 }
 
 .blog-single__content {
-
+  font-size: 15px;
 }
 
 .blog-single__card blockquote {
