--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -127,7 +127,15 @@
 }
 
 .header__callback {
+  display: none;
   margin: 0 auto 5px;
+}
+
+@media (min-width: 620px) {
+
+  .header__callback {
+    display: block;
+  }
 }
 
 @media (min-width: 1045px) {
