--- a/less/blocks/acquired.less
+++ b/less/blocks/acquired.less
@@ -1,33 +1,44 @@
 .acquired {
-
+  background-color: #f7f7f7;
 }
 
 .acquired .container-article {
+  padding-top: 0;
+  padding-bottom: 10px;
   width: 90%;
+
+  border: 2px solid @main-color;
+  border-bottom: none;
+  background-color: #fff;
 }
 
 .acquired__card {
   margin-bottom: 30px;
 
-  padding-top: 20px;
   padding-right: 20px;
   padding-bottom: 20px;
   padding-left: 20px;
 
   border-radius: 2px;
-  background-color: @bg-color-carrots;
 
   box-sizing: border-box;
 
   transition: all 0.5s;
-
-  &:hover {
-    box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
-    transition: all 0.5s;
-  }
 }
 
 .acquired__title {
+  margin-top: 0;
+  margin-bottom: 20px;
+
+  padding-top: 15px;
+  padding-right: 5px;
+  padding-bottom: 15px;
+  padding-left: 5px;
+
+  font-weight: 600;
+  color: #fff;
+
+  background-color: @main-color;
   text-align: center;
 }
 
@@ -59,10 +70,6 @@
 @media (min-width: 768px) {
 
   .acquired .container-article {
-    width: 75%;
-  }
-
-  .acquired__card--video {
-    width: 90%;
+    width: 80%;
   }
 }
