--- a/less/blocks/brand-aquel.less
+++ b/less/blocks/brand-aquel.less
@@ -1,5 +1,5 @@
 .brand-aquel {
-
+  background-color: #f7f7f7;
 }
 
 .brand-aquel .container-article {
@@ -8,6 +8,11 @@
   justify-content: space-around;
   align-items: center;
   width: 90%;
+
+  background-color: #fff;
+
+  border: 2px solid @main-color;
+  border-bottom: none;
 }
 
 .brand-aquel__card--list {
@@ -16,12 +21,12 @@
   padding-bottom: 20px;
   padding-left: 20px;
 
-  background-color: @bg-color-carrots;
-
   transition: all 0.5s;
 
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16), 0 1px 4px 0 rgba(0, 0, 0, 0.12);
+
   &:hover {
-    box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
     transition: all 0.5s;
   }
 }
@@ -37,28 +42,58 @@
 
 
 .brand-aquel__title {
+  padding-top: 15px;
+  padding-bottom: 15px;
+
   font-size: 18px;
+  font-weight: 600;
+  text-align: center;
+
+  color: #fff;
+  background-color: @main-color;
+}
+
+.brand-aquel__sub-title {
+  font-size: 17px;
   font-weight: 600;
   text-align: center;
 }
 
-.brand-aquel__sub-title {
-  font-weight: 600;
-  text-align: center;
+.brand-aquel__sub-title--bg {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  font-size: 16px;
+
+  color: #fff;
+  background-color: @main-color;
 }
 
 .brand-aquel__title--full {
   width: 100%;
   margin-bottom: 30px;
+
+  padding-top: 15px;
+  padding-bottom: 15px;
+
+  color: #fff;
+  background-color: @main-color;
 }
 
 .brand-aquel__content {
+  padding-left: 20px;
+  padding-right: 20px;
+
   font-size: 16px;
 }
 
 .brand-aquel__list {
   padding-left: 0;
   list-style: none;
+
+  text-align: center;
 }
 
 .brand-aquel__year {
@@ -68,7 +103,7 @@
 @media (min-width: 880px) {
 
   .brand-aquel .container-article {
-    width: 80%;
+    max-width: 1100px;
   }
 
   .brand-aquel__card--list {
