--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -16,28 +16,6 @@
   margin-bottom: 10px;
 }
 
-.back-button {
-  display: inline-block;
-  position: relative;
-
-  width: 140px;
-
-  color: #fff;
-  background-color: @main-color;
-
-  font-size: 12px;
-  font-weight: 600;
-
-  text-align: center;
-  transition: all .6s;
-
-  &:hover {
-    color: #fff;
-    background-color: lighten(@main-color, 10%);
-    transition: all .6s;
-  }
-}
-
 .btn--callback {
   padding-top: 5px;
   padding-bottom: 5px;
@@ -58,6 +36,41 @@
     background-color: lighten(@main-color, 10%);
     border-color: @main-color;
     transition: all 0.8s;
+  }
+}
+
+.btn--call-back-nav {
+  display: inline-block;
+  vertical-align: middle;
+
+  margin-top: 10px;
+  margin-left: 10px;
+
+  padding-top: 0;
+  padding-bottom: 0;
+
+  width: 235px;
+
+  color: #fff;
+  font-size: 14px;
+
+  border-radius: 6px;
+  background-color: lighten(@main-color, 5%);
+  transition: all 0.8s;
+
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+              0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
+  &:hover {
+    color: #fff;
+    background-color: lighten(@main-color, 15%);
+    border-color: @main-color;
+    transition: all 0.8s;
+  }
+
+  i {
+    margin-left: 10px;
+    margin-right: 10px;
   }
 }
 
@@ -414,6 +427,12 @@
 
   .btn--welcome-to-shop {
     width: 300px;
+  }
+}
+
+@media (min-width: 620px) {
+  .btn--call-back-nav {
+    display: none;
   }
 }
 
