--- a/less/blocks/certificate-of-quality.less
+++ b/less/blocks/certificate-of-quality.less
@@ -1,5 +1,6 @@
 .certificate {
-
+  padding-bottom: 20px;
+  background-color: #f7f7f7;
 }
 
 .certificate .container-article {
@@ -8,50 +9,56 @@
   justify-content: space-around;
   align-items: center;
 
-  width: 90%;
+  padding-top: 0;
+  padding-bottom: 0;
+
+  width: 95%;
+
+  border: 2px solid @main-color;
+
+  background-color: #fff;
 }
 
 .certificate-card {
-  margin-bottom: 20px;
+  width: 50%;
+}
 
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-
-  border-radius: 2px;
-  background-color: @bg-color-carrots;
-
-  box-sizing: border-box;
-
-  transition: all 0.5s;
-
-  &:hover {
-    box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
-    transition: all 0.5s;
-  }
+.certificate-card--last {
+  width: 100%;
 }
 
 .certificate__title {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
 
-  font-size: 18px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+
+  width: 100%;
+
+  color: #fff;
+  background-color: @main-color;
+
+  font-size: 16px;
   font-weight: 600;
   text-align: center;
+
+  i {
+    margin-right: 10px;
+  }
 }
 
-.certificate__img {
-
+.certificate__img img {
+  margin: 0 auto;
 }
 
 @media (min-width: 768px) {
 
   .certificate .container-article {
-    width: 85%;
+    max-width: 1100px;
   }
 
   .certificate-card {
-
+    width: 20%;
   }
 }
