--- a/less/blocks/contract-offer.less
+++ b/less/blocks/contract-offer.less
@@ -1,41 +1,50 @@
 .contract-offer {
-
+  background-color: #f7f7f7;
 }
 
 .contract-offer .container-article {
   width: 90%;
+
+  padding-bottom: 0;
 }
 
 .contract-offer__card {
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-
-  border-radius: 2px;
-  background-color: @bg-color-carrots;
+  padding-bottom: 10px;
+  background-color: #fff;
 
   box-sizing: border-box;
 
-  transition: all 0.5s;
-
-  &:hover {
-    box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
-    transition: all 0.5s;
-  }
+  border-radius: 2px;
+  border: 2px solid @main-color;
+  border-bottom: none;
 }
 
 .contract-offer__title {
+  margin-top: 0;
+  padding-top: 15px;
+  padding-bottom: 15px;
+
+
+  color: #fff;
+  font-weight: 600;
+  background-color: @main-color;
   text-align: center;
+
+  i {
+    margin-right: 10px;
+  }
 }
 
 .contract-offer__sub-title {
+  padding-left: 20px;
+
   font-size: 20px;
   text-align: left;
 }
 
 .contract-offer__content {
-
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .contract-offer__list {
