--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -50,8 +50,10 @@
   margin-bottom: 5px;
 
   font-size: 32px;
-  letter-spacing: 4px;
+  letter-spacing: 1px;
   font-weight: 600;
+
+  text-align: center;
 }
 
 .introduction__title img {
@@ -242,12 +244,12 @@
   padding-bottom: 0;
 
   text-align: center;
+
+  background-color: #f7f7f7;
 }
 
 .introduction--tehnology .introduction__title {
-  font-size: 26px;
-
-  letter-spacing: 1px;
+  font-size: 32px;
 }
 
 .introduction--tehnology .introduction__aquel-title {
@@ -268,32 +270,23 @@
 }
 
 .introduction--about-us {
-  height: auto;
   padding-top: 30px;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 
   text-align: center;
-}
-
-.introduction--about-us .introduction__aquel-title svg {
-  fill: @style-color;
+  background-color: #f7f7f7;
 }
 
 .introduction--payment-and-shipping {
-  height: auto;
-  padding-top: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 
   text-align: center;
+  background-color: #f7f7f7;
 }
 
 .introduction--payment-and-shipping .introduction__title {
   margin-bottom: 20px;
-}
-
-
-.introduction--payment-and-shipping .introduction__aquel-title svg {
-  margin-top: 10px;
-  fill: @style-color;
 }
 
 .introduction__content .introduction__content--payment-and-shipping {
@@ -301,10 +294,14 @@
 }
 
 .introduction--privacy-police {
-  height: auto;
   padding-top: 30px;
+  padding-bottom: 20px;
+
+  height: auto;
 
   text-align: center;
+
+  background-color: #f7f7f7;
 }
 
 .introduction--privacy-police .introduction__title {
@@ -312,19 +309,16 @@
   font-size: 30px;
 }
 
-.introduction--privacy-police .introduction__aquel-title svg {
-  fill: @style-color;
-}
-
 .introduction__content--privacy-police {
 
 }
 
 .introduction--warranty-and-service {
-  height: auto;
-  padding-top: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 
   text-align: center;
+  background-color: #f7f7f7;
 }
 
 .introduction--warranty-and-service .introduction__title {
@@ -336,14 +330,22 @@
 
 }
 
-.introduction--warranty-and-service .introduction__aquel-title svg {
-  fill: @style-color;
+.introduction--certificate {
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  background-color: #f7f7f7;
+}
+
+.introduction__content--certificate {
+
 }
 
 .introduction--blog {
-  height: auto;
   padding-top: 30px;
   padding-bottom: 0;
+
+  background-color: #f7f7f7;
 }
 
 .introduction--blog .introduction__title {
@@ -371,14 +373,7 @@
   background-color: @main-color;
 }
 
-.introduction--blog .introduction__aquel-title svg {
-  margin-bottom: 20px;
-  fill: @style-color;
-}
-
 .introduction--blog-single {
-  height: auto;
-
   padding-top: 20px;
   padding-bottom: 5px;
   background-color: #f7f7f7;
@@ -411,14 +406,14 @@
 }
 
 .introduction--acquired {
-  height: auto;
-
   padding-top: 20px;
   padding-bottom: 20px;
+
+  background-color: #f7f7f7;
 }
 
 .introduction--acquired .introduction__title {
-
+  margin-bottom: 20px;
 }
 
 .introduction--acquired .introduction__aquel-title svg {
@@ -426,10 +421,23 @@
 }
 
 .introduction--brand-aquel {
-  height: auto;
   padding-top: 30px;
+  padding-bottom: 30px;
 
   text-align: center;
+
+  background-color: #f7f7f7;
+}
+
+.introduction--brand-aquel .introduction__title img {
+  width: 46px;
+  margin-right: -8px;
+}
+
+.introduction--contract-offer {
+  padding-top: 30px;
+  padding-bottom: 20px;
+  background-color: #f7f7f7;
 }
 
 @media (min-width: 620px) {
@@ -453,48 +461,43 @@
   }
 
   .introduction--about-us {
-    height: auto;
+
   }
 
   .introduction--tehnology {
-    height: auto;
+
   }
 
   .introduction--payment-and-shipping {
-    height: auto;
+
   }
 
   .introduction--privacy-police {
-    height: auto;
+
   }
 
   .introduction--warranty-and-service {
-    height: auto;
+
   }
 
   .introduction--blog {
-    height: auto;
+
   }
 
   .introduction--blog-single {
-    height: auto;
+
   }
 
   .introduction--acquired {
-    height: auto;
+
   }
 
   .introduction--brand-aquel {
-    height: auto;
-  }
 
-  .introduction--about-us .introduction__aquel-title svg {
-    width: 120px;
-    height: auto;
   }
 
   .introduction--privacy-police .introduction__title {
-    font-size: 40px;
+    font-size: 32px;
   }
 
   .introduction-decoration-about {
