--- a/less/blocks/payment-and-shipping.less
+++ b/less/blocks/payment-and-shipping.less
@@ -1,46 +1,49 @@
 .payment-and-shipping {
-
+  background-color: #f7f7f7;
 }
 
 .payment-and-shipping .container-article {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  width: 90%;
+  width: 95%;
+
+  padding-top: 0;
+
+  border: 2px solid @main-color;
+  border-bottom: none;
+  background-color: #fff;
 }
 
 .payment-and-shipping-card {
   display: flex;
   flex-direction: column;
 
-  width: 90%;
-  margin-bottom: 20px;
-
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-
-  border-radius: 2px;
-  background-color: @bg-color-carrots;
-
-  box-sizing: border-box;
-
-  transition: all 0.5s;
-
-  &:hover {
-    box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
-    transition: all 0.5s;
-  }
+  width: 100%;
 }
 
 .payment-and-shipping__title {
+  margin-top: 0;
+  margin-bottom: 20px;
+
+  padding-top: 15px;
+  padding-bottom: 15px;
+
+  color: #fff;
+  background-color: @main-color;
+
   font-size: 18px;
   font-weight: 600;
   text-align: center;
+
+  i {
+    margin-right: 10px;
+  }
 }
 
 .payment-and-shipping__content {
+  padding-left: 20px;
+  padding-right: 10px;
   font-size: 16px;
 }
 
@@ -51,6 +54,6 @@
 @media (min-width: 768px) {
 
   .payment-and-shipping .container-article {
-    width: 80%;
+    max-width: 1100px;
   }
 }
