--- a/less/blocks/privacy-police.less
+++ b/less/blocks/privacy-police.less
@@ -1,5 +1,5 @@
 .privacy-police {
-
+  background-color: #f7f7f7;
 }
 
 .privacy-police .container-article {
@@ -7,6 +7,13 @@
   justify-content: space-around;
   flex-wrap: wrap;
   width: 90%;
+
+  padding-top: 0;
+
+  background-color: #fff;
+
+  border: 2px solid @main-color;
+  border-bottom: none;
 }
 
 .privacy-police-card {
@@ -21,26 +28,26 @@
   padding-bottom: 20px;
   padding-left: 20px;
 
-  border-radius: 2px;
-  background-color: @bg-color-carrots;
-
   box-sizing: border-box;
-
-  transition: all 0.5s;
-
-  &:hover {
-    box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
-    transition: all 0.5s;
-  }
 }
 
 .privacy-police__title {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  width: 100%;
+
+  margin-top: 0;
+  padding-top: 15px;
+  padding-bottom: 15px;
 
   font-size: 18px;
   font-weight: 600;
   text-align: center;
+
+  color: #fff;
+  background-color: @main-color;
+}
+
+.privacy-police__title i {
+  margin-right: 10px;
 }
 
 .privacy-police__content {
