--- a/less/blocks/tehnology-review.less
+++ b/less/blocks/tehnology-review.less
@@ -1,16 +1,18 @@
 .tehnology-review {
-
+  background-color: #f7f7f7;
 }
 
 .tehnology-review .container-article {
   width: 90%;
+
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: #fff;
 }
 
 .tehnology-review-card {
   display: flex;
   flex-direction: column;
-
-  margin-bottom: 20px;
 
   padding-top: 25px;
   padding-right: 25px;
@@ -21,16 +23,10 @@
   outline: 2px solid @main-color;
 
   box-sizing: border-box;
-
-  transition: all 0.5s;
-
-  &:hover {
-    box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
-    transition: all 0.5s;
-  }
 }
 
 .tehnology-review-card--first {
+  margin-bottom: 25px;
   padding-top: 0;
   padding-right: 0;
   padding-bottom: 0;
@@ -75,28 +71,15 @@
   text-align: center;
 }
 
-.tehnology-review blockquote {
-  margin-bottom: 30px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-
-  outline: 1px solid @style-color;
-
-  border-color: @style-color;
-  background-color: #f0f8ff;
-  font-weight: bold;
-  font-style: italic;
-}
-
 .tehnology-review h3 {
+  margin-top: 30px;
   margin-bottom: 30px;
-  text-align: center;
+  text-align: left;
   font-weight: bold;
 }
 
 .tehnology-review__list {
-  font-size: 18px;
-  color: #606060;
+  font-size: 16px;
 }
 
 .tehnology-review__list li {
@@ -109,9 +92,107 @@
   margin-bottom: 30px;
 }
 
+.tehnology-review__tabs {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  flex-wrap: wrap;
+
+  margin-bottom: 10px;
+
+  text-align: center;
+  background-color: #f9f9f9;
+}
+
+.tehnology-review__tabs li a {
+  font-size: 13px;
+}
+
+.tehnology-review__tabs li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
+
+  margin: 0;
+
+
+  border: none;
+  background-color: transparent;
+
+  outline: 1px solid #ececec;
+}
+
+.tehnology-review__tabs li.active {
+  background-color: #fff;
+  box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
+}
+
+.tehnology-review__tabs li.active a,
+.tehnology-review__tabs li.active a:hover,
+.tehnology-review__tabs li.active a:focus {
+  color: #666;
+  background-color: transparent;
+
+  cursor: pointer;
+}
+
+.tehnology-tab-content .active {
+  display: block;
+}
+
+.tehnology-tab-pane {
+
+}
+
+.tehnology-tab-pane ol,
+.tehnology-tab-pane ul {
+  padding: 0;
+  padding-left: 20px;
+
+  width: 100%;
+}
+
+.tehnology-tab__title {
+  position: relative;
+  padding-left: 20px;
+}
+
+.tehnology-tab__title::before {
+  content: " ";
+  position: absolute;
+  display: block;
+
+  height: 100%;
+  width: 2px;
+
+  left: 0;
+
+  background-color: @main-color;
+}
+
+.tab-pane p {
+  margin-top: 10px;
+}
+
+.tehnology-review__tab {
+  font-size: 16px;
+
+  color: #777777;
+}
+
+.tehnology-review__tab--center {
+  text-align: center;
+}
+
 @media (min-width: 768px) {
 
   .tehnology-review .container-article {
-    width: 75%;
+    width: 80%;
+    max-width: 1100px;
+  }
+
+  .tehnology-review__tabs li {
+    width: 25%;
   }
 }
