--- a/less/blocks/warranty-and-service.less
+++ b/less/blocks/warranty-and-service.less
@@ -1,5 +1,5 @@
 .warranty-and-service {
-
+  background-color: #f7f7f7;
 }
 
 .warranty-and-service .container-article {
@@ -7,7 +7,15 @@
   flex-wrap: wrap;
   justify-content: space-around;
 
-  width: 90%;
+
+  padding-top: 0;
+  padding-bottom: 0;
+  width: 95%;
+
+  background-color: #fff;
+
+  border: 2px solid @main-color;
+  border-bottom: none;
 }
 
 .warranty-and-service-card {
@@ -17,36 +25,40 @@
 
   width: 100%;
 
-  margin-bottom: 10px;
-
   padding-bottom: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
-
-  border-radius: 2px;
-
-  transition: all 0.5s;
-
-  background-color: @bg-color-carrots;
-
-  &:hover {
-    transition: all 0.5s;
-    box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
-  }
 }
 
 .warranty-and-service__title {
+  margin-top: 0;
   margin-bottom: 20px;
+
+  padding-top: 15px;
+  padding-bottom: 15px;
+
+  color: #fff;
+  background-color: @main-color;
+
+  font-size: 18px;
+  font-weight: 600;
   text-align: center;
+
+  i {
+    margin-right: 10px;
+  }
 }
 
 .warranty-and-service__content {
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
+.warranty-and-service__list {
+  padding-right: 20px;
 }
 
 @media (min-width: 768px) {
 
   .warranty-and-service .container-article {
-    width: 80%;
+    max-width: 1100px;
   }
 }
